News on the plotutils+ package.  See ONEWS for the news file for 
the GNU plotutils package that plotutils+ is based on, and OONEWS 
for even older news.

Versions 3.2, in development:

* By default, disabled creation of a shared libplot library (now
  static only).  This may reduce possible conflicts with the 
  old version of plotutils that may be installed.  The shared library
  an be re-enabled with an --enable-shared argument to ./configure.

* Created an install-fonts shell file in 'fonts', to handle installation
  of the supplied fonts for Ubuntu-like systems.

Version 3.1, 2020-12-21:

Changes in this version are largely aimed at making the 'graph'
program work better for interactively displaying data produced by
other programs.  With the new facilities in this release, pipelines
such as the following are recommended for this task:

    program | graph -n         # line plot
    program | graph -n -p      # point plot
    program | graph -n -ly     # line plot with logarithmic y axis
    program | graph -n -p -gy  # point plot with horizontal grid lines 
    program | graph -n -p1     # point plot with small points
    program | graph -n -C      # line plot with black line (not red)
    program | graph -n -y0     # Plot positive data with y axis from 0

Once the program has finished, the graph program (and the X window
showing the plot) can be terminated with Control-C, or by closing the
plot window (using whatever means the window manager provides).

The program may output multiple data sets, separated by blank lines,
which (by default with -n) will be plotted in different colours.

Some selection of these options can of course be included automatically 
using either a shell alias or a shell script.  For a shell script, a
final line to run the graph program is best done as "exec graph ...",
since this results in cleaner behaviour when Control-C is used.

Details of changes:

graph:   

* A new set of default plot parameters can now be enabled with the